
2021-04-27  Ron Norman <rjn@inglenet.com>

	* cobfile.c: Initial version of file copy program

2021-03-04  Ron Norman <rjn@inglenet.com>

	* gcdiff.c: Fix bug in matching date/time pattern

2020-12-22  Ron Norman <rjn@inglenet.com>
	* cobcrun.c: call  cob_init_nomain  as all version info is now coming 
			from the I/O modules themselves

2020-12-05  Ron Norman <rjn@inglenet.com>

	* gcdiff.c: Also look for run options $COB_CONFIG_DIR/gcdiff.conf
	           New -U  option removes trailling underscore and leaves spaces
			   New feature to compare hex values as long as the start with
			   ' 0x' and value is the same. Avoids 32/64 bit issues.

2020-10-27  Simon Sobisch <simonsobisch@gnu.org>

	* cobcrun.c: when in verbose mode additionally ask libcob for
	  version summary, showing library details

2020-10-26  Simon Sobisch <simonsobisch@gnu.org>

	* cobcrun.c: defaults.h removed
	* Makefile.am: removed passing COB_EXPORT_DYN to LD_FLAGS

2020-09-30  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: fixed inclusion of libsupport
	* cobcrun.c, gcdiff.c: include gettext without lib prefix
	* cobcrun.c: use EXIT_SUCCESS and EXIT_FAILURE instead of exit(0/1)

2020-06-28  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: include PROGRAMS_LIBS

2020-06-12  Simon Sobisch <simonsobisch@gnu.org>

	* cobcrun.c (process_command_line) [_WIN32]: simplified code;
	  only convert from /opt to -opt if POSIXLY_CORRECT is not set;
	  added conversion from /? to --help

2020-06-09  Simon Sobisch <simonsobisch@gnu.org>

	Bug #616 cannot redirect output of cobcrun --info
	FR #385 more details for screenio in cobcrun --info
	* cobcrun.c: added verbose option, passed to (print_info_detailed)

2020-05-07  Simon Sobisch <simonsobisch@gnu.org>

	* cob-config.in: extended with an actual help
	* cob-config.1: now auto-generated like cobcrun.1
	* Makefile.am (cob-config.1): target added with use of help2man

2020-03-11  Simon Sobisch <simonsobisch@gnu.org>
