@@ -41,6 +41,7 @@
 #include	<ctype.h>
 #include	<libcob.h>
 #include	<stdarg.h>
+#include	<errno.h>
 #include	"tarstamp.h"
 #include	"libcob/cobgetopt.h"
 #include	"libcob/sysdefines.h"
@@ -68,6 +69,7 @@
 
 #define TRUE 1
 #define FALSE 0
+static time_t	nowis;
 static int be_quiet = 0;
 static int keep_code = 0;
 static int batchin = 0;
@@ -78,28 +80,143 @@ static const cob_field_attr	all_numeric_display_attr =
 				 0, NULL};
 static char prompt[64] = "cobfile:>";
 static char	cmdfile[256] = "";
-static char	progid[32] = "";
+static char	cblout[48] = "CPYFILE";
+static char	proglwr[32] = "CPYFILE";
+static char	progid[32] = "CPYFILE";
+static char cobcopts[128] = "-fmf-files";
 static char copyin[256] = "";
 static char copyout[256] = "";
 static char fileindef[256] = "";
 static const char *copyext[] = {"",".cpy",".cbl",".cob",".CPY",".CBL",".COB",NULL};
 static char *copysearch = NULL;
-#if 0 /* For later use */
-static int outNl = 0;
+static char	progver[64] = "* Created by cobfile: ";
+static char	inorg[48] = "RELATIVE";
+static char	*inkeys[16] = {NULL,NULL,NULL};
+static char wrkstr[1024];
+static char inkeydesc[1024];
+static char skipif[1024] = "";
+static char skipnum[12] = "0";
+static char copynum[12] = "0";
+static char	outorg[48] = "RELATIVE";
+static char	*outkeys[16] = {NULL,NULL,NULL};
+static char outkeydesc[1024];
+static int	outNl = 1;
 static FILE	*fo = NULL;
 /********************************/
 /**  Source code for emission  **/
 /********************************/
 typedef struct {
-	char		type;	/* type of statement being processed */
+	char		type;	/* type of statement  */
 	const char	*text;	/* Text to be emitted */
 } Source;
 
 static Source ident[] = {
 	{0," IDENTIFICATION DIVISION.\n"},
+	{0," PROGRAM-ID. "},
+	{0,progid},
+	{0,".\n"},
+	{0,progver},
+	{0,"\n"},
+	{0," ENVIRONMENT DIVISION.\n"},
+	{0," CONFIGURATION SECTION.\n"},
+	{0," INPUT-OUTPUT  SECTION.\n"},
+	{0," FILE-CONTROL.\n"},
+	{0,"     SELECT INFILE\n"},
+	{0,"     ASSIGN EXTERNAL INFILE\n"},
+	{0,"     ORGANIZATION "},
+	{0,inorg},
+	{0,"\n"},
+	{0,"     ACCESS IS SEQUENTIAL\n"},
+	{0,inkeydesc},
+	{0,"     FILE STATUS IS IN-STAT.\n"},
+	{0," \n"},
+	{0,"     SELECT OUTFILE\n"},
+	{0,"     ASSIGN EXTERNAL OUTFILE\n"},
+	{0,"     ORGANIZATION "},
+	{0,outorg},
+	{0,"\n"},
+	{0,"     ACCESS IS SEQUENTIAL\n"},
+	{0,outkeydesc},
+	{0,"     FILE STATUS IS OUT-STAT.\n"},
+	{0," \n"},
+	{0," DATA DIVISION.\n"},
+	{0," FILE SECTION.\n"},
+	{0,NULL}};
+static Source inputfd[] = {
+	{0," FD INFILE\n"},
+	{0,"     BLOCK CONTAINS 5 RECORDS.\n"},
+	{0,NULL}};
+static Source outputfd[] = {
+	{0," FD OUTFILE\n"},
+	{0,"     BLOCK CONTAINS 5 RECORDS.\n"},
+	{0,NULL}};
+static Source working[] = {
+	{0," WORKING-STORAGE SECTION.\n"},
+	{0," 01  IN-STAT              PIC XX    VALUE '00'.\n"},
+	{0," 01  OUT-STAT             PIC XX    VALUE '00'.\n"},
+	{0," 01  IN-RECNUM            PIC 9(12) VALUE 0.\n"},
+	{0," 01  OUT-RECNUM           PIC 9(12) VALUE 0.\n"},
+	{0," 01  RECS-READ            PIC 9(12) VALUE 0.\n"},
+	{0," 01  RECS-WRITTEN         PIC 9(12) VALUE 0.\n"},
+	{0," 01  SKIP-RECS            PIC 9(12) VALUE "},
+	{0,skipnum},
+	{0,".\n"},
+	{0," 01  COPY-RECS            PIC 9(12) VALUE "},
+	{0,copynum},
+	{0,".\n"},
 	{0," \n"},
 	{0,NULL}};
-#endif
+static Source procedure[] = {
+	{0," PROCEDURE DIVISION.\n"},
+	{0," MAIN-100.\n"},
+	{0,"     OPEN INPUT INFILE.\n"},
+	{0,"     IF IN-STAT NOT = '00'\n"},
+	{0,"         DISPLAY 'ERROR ' IN-STAT ' OPENING INPUT FILE'\n"},
+	{0,"         STOP RUN\n"},
+	{0,"     END-IF.\n"},
+	{0,"     OPEN OUTPUT OUTFILE.\n"},
+	{0,"     IF OUT-STAT NOT = '00'\n"},
+	{0,"         DISPLAY 'ERROR ' OUT-STAT ' OPENING OUTPUT FILE'\n"},
+	{0,"         STOP RUN\n"},
+	{0,"     END-IF.\n"},
+	{0,"     INITIALIZE OUT-REC.\n"},
+	{0," \n"},
+	{0," GET-NEXT-100.\n"},
+	{0,"     READ INFILE\n"},
+	{0,"     \tAT END GO TO END-PROG-100\n"},
+	{0,"     END-READ.\n"},
+	{0,"     IF  IN-STAT NOT = '00'\n"},
+	{0,"     AND IN-STAT NOT = '02'\n"},
+	{0,"         DISPLAY 'ERROR ' IN-STAT ' READING INPUT'\n"},
+	{0,"         GO TO END-PROG-100\n"},
+	{0,"     END-IF.\n"},
+	{0,"     ADD 1  TO RECS-READ.\n"},
+	{0,"     IF  SKIP-RECS > 0\n"},
+	{0,"     AND SKIP-RECS <= RECS-READ\n"},
+	{0,"         GO TO GET-NEXT-100.\n"},
+	{0,skipif},
+	{0," \n"},
+	{0,NULL}};
+static Source endprog[] = {
+	{0,"     WRITE OUT-REC.\n"},
+	{0,"     IF  OUT-STAT NOT = '00'\n"},
+	{0,"     AND OUT-STAT NOT = '02'\n"},
+	{0,"         DISPLAY 'ERROR ' OUT-STAT ' WRITING OUTPUT'\n"},
+	{0,"         GO TO END-PROG-100\n"},
+	{0,"     END-IF.\n"},
+	{0,"     ADD 1  TO RECS-WRITTEN.\n"},
+	{0,"     IF  COPY-RECS > 0\n"},
+	{0,"     AND COPY-RECS >= RECS-WRITTEN\n"},
+	{0,"         GO TO END-PROG-100.\n"},
+	{0,"     GO TO GET-NEXT-100.\n"},
+	{0," \n"},
+	{0," END-PROG-100.\n"},
+	{0,"     DISPLAY RECS-READ    ' records read'.\n"},
+	{0,"     DISPLAY RECS-WRITTEN ' records written'.\n"},
+	{0,"     CLOSE INFILE.\n"},
+	{0,"     CLOSE OUTFILE.\n"},
+	{0,"     STOP RUN.\n"},
+	{0,NULL}};
 
 static const char short_options[] = "hqVki:p:D:";
 
@@ -227,30 +344,46 @@ dropField (cob_field *f)
 static int
 matchWord (const char *word, char *defs, char *str, int *pos )
 {
-	int	j, k, doeq;
+	int	j, k, doeq, doend;
 	int	ln = strlen (word);
-	char	*newstr;
+	char	*newstr, marker, endmark;
+	marker = endmark = 3;
+	doend = doeq = 0;
 	if (word[ln-1] == '=') {
+		marker = '=';
 		doeq = 1;
 		ln--;
-	} else {
-		doeq = 0;
+	} else if (word[ln-1] == '[') {
+		marker = '[';
+		endmark = ']';
+		doend = doeq = 1;
+		ln--;
 	}
 	if (strncasecmp (defs + *pos, word, ln) != 0)
 		return 0;
 	k = *pos + ln;
-	while (defs[k] == ' ') k++;
-	if (doeq && defs[k] != '=')
-		return 0;
-	if (doeq && defs[k] == '=')
+	while (isspace(defs[k])) k++;
+	if (doeq) {
+		if (defs[k] != marker)
+			return 0;
 		k++;
-	while (defs[k] == ' ') k++;
-	for (j = 0; defs[k] > ' ' 
-			&& defs[k] != ',' 
-			&& defs[k] != ';' 
+		while (isspace(defs[k])) k++;
+	}
+	if (doend) {
+		for (j = 0; defs[k] != endmark 
 			&& defs[k] != 0; )
 		str[j++] = defs[k++];
+	} else {
+		for (j = 0; defs[k] > ' ' 
+			&& defs[k] != ',' 
+			&& defs[k] != ';' 
+			&& defs[k] != endmark
+			&& defs[k] != 0; )
+		str[j++] = defs[k++];
+	}
 	str[j] = 0;
+	if (defs[k] == endmark)
+		k++;
 	memset (defs + *pos, ' ', k - *pos);
 	*pos = k - 1;
 	newstr = cob_expand_env_string (str);
@@ -267,13 +400,12 @@ findCopy (char *book)
 	int		k,pl;
 	FILE	*fi;
 
-	if (book[0] == '.' || book[0] == SLASH_CHAR) {
-		fi = fopen (path, "r");
-		if (fi != NULL) {
-			strcpy (book, path);
-			fclose (fi);
-			return book;
-		}
+	strcpy (path, book);
+	fi = fopen (path, "r");
+	if (fi != NULL) {
+		strcpy (book, path);
+		fclose (fi);
+		return book;
 	}
 	for (p = copysearch; p && *p != 0; p = t) {
 		t = strchr (p, PATHSEP_CHAR);
@@ -304,38 +436,39 @@ getRecsz (cob_file *fl, char *def)
 	for (k=0; def[k] != 0; k++) {
 		if (strncasecmp (&def[k], "recsz=",6) == 0) {
 			rcsz = atoi (&def[k+6]);
-			if (fl->record_max != rcsz) {
-				fl->record_max = rcsz;
-				fl->record_min = rcsz;
-			}
+			fl->record_max = rcsz;
+			fl->record_min = rcsz;
 			break;
 		}
 		if (strncasecmp (&def[k], "maxsz=",6) == 0) {
 			rcsz = atoi (&def[k+6]);
-			if (fl->record_max != rcsz) {
-				fl->record_max = rcsz;
-			}
-			break;
+			fl->record_max = rcsz;
+		}
+		if (strncasecmp (&def[k], "minsz=",6) == 0) {
+			rcsz = atoi (&def[k+6]);
+			fl->record_min = rcsz;
 		}
 	}
 }
 
 /* Parse out the file definition */
 static void
-parseFile (cob_file *fl, const char *select, int rcsz, char *defs, char *copy)
+parseFile (cob_file *fl, const char *select, int rcsz, char *defs, char *copy, char *keys[])
 {
 	char	val[1024], both[1024], filename[1024];
-	int		j,k,ln;
+	int		j,k,ln,idx;
 	cob_field *flsts;
 
 	strcpy (copy, "");
+	keys[0] = NULL;
+	idx = 1;
 	fl->select_name = strdup (select);
 	fl->file_version = COB_FILE_VERSION;
 	fl->organization = COB_ORG_SEQUENTIAL;
 	fl->access_mode = COB_ACCESS_SEQUENTIAL;
 	for (k=0; defs[k] != 0; k++) {
 		if (k==0 
-		|| defs[k-1] == ' ') {
+		|| isspace(defs[k-1])) {
 			if (matchWord ("FILE=", defs, val, &k)) {
 				ln = strlen (val);
 				dropField (fl->assign);
@@ -344,9 +477,27 @@ parseFile (cob_file *fl, const char *select, int rcsz, char *defs, char *copy)
 				fl->assign->data[ln] = 0;
 			} else
 			if (matchWord ("COPY=", defs, val, &k)) {
-				if (findCopy (val)) {
-					strcpy (copy, val);
+				strcpy (both, val);
+				if (!findCopy (both)) {
+					printf ("Unable to find COPY %s\n",val);
+				} else {
+					strcpy(copy, val);
 				}
+			} else
+			if (matchWord ("PRIMARY[", defs, val, &k)) {
+				keys[0] = strdup (val);
+			} else
+			if (matchWord ("UNIQUE[", defs, val, &k)) {
+				keys[idx++] = strdup (val);
+			} else
+			if (matchWord ("INDEX[", defs, val, &k)) {
+				strcat (val,"\n\t\t\tWITH DUPLICATES");
+				keys[idx++] = strdup (val);
+			} else
+			if (matchWord ("SUPPRESS[", defs, val, &k)) {
+				sprintf (both,"%s\n\t\t\tSUPPRESS WHEN %s",keys[idx-1],val);
+				free (keys[idx-1]);
+				keys[idx-1] = strdup (both);
 			}
 		}
 	}
@@ -385,42 +536,59 @@ parseFile (cob_file *fl, const char *select, int rcsz, char *defs, char *copy)
 	}
 }
 
-#if 0 /* For later use */
 /*****************************************************************/
 /* "output" a formated string to the output file                 */
 /*****************************************************************/
 static void
-output(
-	char *fmt, ...)
+output(char *fmt, ...)
 {
 	va_list ap;
-	char buf[ 300 ];
-	int	i;
+	char buf[ 4096 ];
+	int	i,j,ln,col,hang;
 
 	va_start( ap, fmt );
 	vsprintf( buf, fmt, ap );
 
-	if(outNl
-	&& buf[0] != '\n') {
-		fprintf(fo,"%6s"," ");
+	i = col = hang = 0;
+	ln = strlen(buf);
+	while (i < ln) {
+		if(outNl
+		&& buf[i] != '\n') {
+			fprintf(fo,"      ");
+			col = 6;
+		}
+		if(buf[i] == '!') {
+			fputs("     ", fo);	/* Skip over to AREA B */
+			i++;
+			col += 5;
+		}
+		while (buf[i] != '\n' && i < ln) {
+			if (buf[i] == '\t') {
+				do {
+					fputc (' ', fo);
+					col++;
+				} while ( (col % 4) != 3 );
+			} else if (buf[i] == '~') {
+				hang = col;
+			} else if (buf[i] == '@') {
+				while (col < hang) {
+					fputc (' ', fo);
+					col++;
+				}
+			} else {
+				fputc(buf[i], fo);
+				col++;
+			}
+			i++;
+		}
+		if (buf[i] == '\n') {
+			fputc(buf[i++], fo);
+			outNl = TRUE;
+			col = 0;
+		}
 	}
-	i = 0;
-	if(buf[i] == '!') {
-		fputs("     ", fo);	/* Skip over to AREA B */
-		i++;
-	}
-	if(buf[i] == '^') {
-		fputs("   ", fo);	/* Skip over a few */
-		i++;
-	}
-	while(buf[i] == '\t') {	/* Tab = move over 4 spaces */
-		fputs("    ", fo);
-		i++;
-	}
-	fputs(&buf[i], fo);
 
-	i = strlen(buf);
-	if(buf[i-1] == '\n')
+	if(buf[ln-1] == '\n')
 		outNl = TRUE;
 	else
 		outNl = FALSE;
@@ -433,11 +601,10 @@ output(
 /** Write an array of strings to the output file                **/
 /*****************************************************************/
 static void
-outArray(
-	Source	*array)
+outArray(Source	*array)
 {
 	int		i;
-	char	buf[128];
+	char	buf[1024];
 	for(i=0; array[i].text != NULL; i++) {
 		if(strlen(array[i].text) < 1)
 			continue;
@@ -451,7 +618,6 @@ outArray(
 		}
 	}
 }
-#endif
 
 /*
 * Output version information
@@ -502,11 +668,9 @@ gcd_usage (char *prog)
 	printf (_("usage: %s [options]"), prog);
 	putchar ('\n');
 	puts (_("Options:"));
-#if 0 /* For later use */
 	puts (_("  -i  cmdfile    Read commands from this file"));
 	puts (_("  -p  progid     Define PROGRAM-ID "));
 	puts (_("  -k, -keep      Keep the generated COBOL code"));
-#endif
 	puts (_("  -D  env=val    Define environment variable"));
 	puts (_("  -h, -help      display this help and exit"));
 	puts (_("  -V, -version   display version and exit"));
@@ -560,6 +724,110 @@ set_option (char *binary, int opt, char *arg)
 		exit(2);
 		break;
 	}
+}
+
+static const char *
+getOrg (int org)
+{
+	switch (org) {
+	case COB_ORG_SEQUENTIAL:		return "SEQUENTIAL";
+	case COB_ORG_LINE_SEQUENTIAL:	return "LINE SEQUENTIAL";
+	case COB_ORG_RELATIVE:			return "RELATIVE";
+	case COB_ORG_INDEXED:			return "INDEXED";
+	default: return "UNKNOWN ORG";
+	}
+}
+
+static char *
+addOfRec (char *str, char *rec)
+{
+	int	j,k,dolast;
+	dolast = 1;
+	for(j=k=0; str[k] != 0; ) {
+		if (str[k] == ',') {
+			j += sprintf(&wrkstr[j], " OF %s,\n@",rec);
+			k++;
+			continue;
+		}
+		if (str[k] == '\n' && dolast) {
+			j += sprintf(&wrkstr[j], " OF %s",rec);
+			dolast = 0;
+		}
+		wrkstr[j++] = str[k++];
+	}
+	if (dolast)
+		j += sprintf(&wrkstr[j], " OF %s",rec);
+	return wrkstr;
+}
+
+/* Generate Copy program */
+static int
+genCopy (cob_file *fli, cob_file *flo)
+{
+	FILE	*fin;
+	char	buf[256];
+	int		k;
+
+
+	strcpy(inorg, getOrg (fli->organization));
+	strcpy(inkeydesc,"");
+	if (fli->organization == COB_ORG_RELATIVE) {
+		strcpy(inkeydesc," \tRELATIVE KEY IS IN-RECNUM\n");
+	} else
+	if (fli->organization == COB_ORG_INDEXED) {
+		sprintf (inkeydesc, 
+				"!RECORD KEY IS PRIMARY-KEY-1\n!\tSOURCE IS ~%s\n",
+					addOfRec(inkeys[0],"IN-REC"));
+		for (k=1; inkeys[k] != NULL; k++)
+			sprintf (&inkeydesc[strlen(inkeydesc)],
+				"!ALTERNATE RECORD KEY IS SECONDARY-KEY-%d\n!\tSOURCE IS ~%s\n",
+					k+1,addOfRec(inkeys[k],"IN-REC"));
+	}
+	strcpy(outkeydesc,"");
+	if (flo->organization == COB_ORG_RELATIVE) {
+		strcpy(outkeydesc," \tRELATIVE KEY IS IN-RECNUM\n");
+	} else
+	if (flo->organization == COB_ORG_INDEXED) {
+		sprintf (outkeydesc, 
+				"!RECORD KEY IS O-PRIMARY-KEY-1\n!\tSOURCE IS ~%s\n",
+					addOfRec(outkeys[0],"OUT-REC"));
+		for (k=1; outkeys[k] != NULL; k++)
+			sprintf (&outkeydesc[strlen(outkeydesc)],
+				"!ALTERNATE RECORD KEY IS O-SECONDARY-KEY-%d\n!\tSOURCE IS ~%s\n",
+					k+1,addOfRec(outkeys[k],"OUT-REC"));
+	}
+	strcpy(outorg, getOrg (flo->organization));
+	for (k=0; progid[k] != 0; k++)
+		progid[k] = toupper(progid[k]);
+	sprintf(progver,"* Created by cobfile: %s",ctime (&nowis));
+	outArray (ident);
+	outArray (inputfd);
+	fflush (fo);
+	output ("\n 01  IN-REC.\n");
+	if (copyin[0] > ' ') {
+		output ("!COPY %s.\n",copyin);
+	} else {
+		output ("!05  FILLER\tPIC X(%d).\n",fli->record_max);
+	}
+	output (" \n");
+	outArray (outputfd);
+	fflush (fo);
+	output ("\n 01  OUT-REC.\n");
+	if (copyout[0] > ' ') {
+		output ("!COPY %s.\n",copyout);
+	} else {
+		output ("!05  FILLER\tPIC X(%d).\n",flo->record_max);
+	}
+	output (" \n");
+	outArray (working);
+	outArray (procedure);
+	if (copyout[0] > ' '
+	 && copyin[0] > ' ') {
+		output (" \tMOVE CORRESPONDING IN-REC\tTO OUT-REC.\n");
+	} else {
+		output (" \tMOVE IN-REC\tTO OUT-REC.\n");
+	}
+	outArray (endprog);
 }
 
 /* Copy the data file */
@@ -636,7 +904,7 @@ main(
 	int		argc,
 	char	*argv[])
 {
-	int		opt,idx,i,k,skip,ncopy;
+	int		opt,idx,i,j,k,skip,ncopy;
 	FILE	*ref;
 	cob_file flin[1], flout[1];
 	char	*env, *p;
@@ -646,22 +914,26 @@ main(
 #ifdef	HAVE_SETLOCALE
 	setlocale (LC_ALL, "");
 #endif
-	if(!isatty(0)) {
-		batchin = 1;
-	} else {
-		printf("Commands end with a semicolon;\n");
-		printf("To exit enter:   quit;\n");
-	}
+	time (&nowis);
+	sprintf (progid, "CPYFIL%02d", (int)(nowis % 97));
+
 	/* Process cobfile.conf from current directory */
-	ref = fopen("cobfile.conf","r");
+	strcpy(conffile,"cobfile.conf");
+	ref = fopen(conffile,"r");
 	if(ref == NULL) {
 		/* Check for cobfile.conf in $HOME directory */
-		sprintf(conffile,"%s/cobfile.conf","~");
-		ref = fopen(conffile,"r");
+		if ((env = getenv("HOME")) != NULL) {
+			sprintf(conffile,"%s/cobfile.conf",env);
+			ref = fopen(conffile,"r");
+		}
 	}
 	if(ref == NULL) {
 		/* Check for cobfile.conf in config directory */
-		sprintf(conffile,"%s/cobfile.conf",COB_CONFIG_DIR);
+		if ((env = getenv("COB_CONFIG_DIR")) != NULL) {
+			sprintf(conffile,"%s/cobfile.conf",env);
+		} else {
+			sprintf(conffile,"%s/cobfile.conf",COB_CONFIG_DIR);
+		}
 		ref = fopen(conffile,"r");
 	}
 	if(ref) {
@@ -670,7 +942,7 @@ main(
 			if (buf[0] == '-') {	/* Option for cobfile ?*/
 				opt = buf[1];
 				for (i=2; isspace(buf[i]); i++);
-				set_option((char*)"cobfile.conf",opt,&buf[i]);
+				set_option(conffile,opt,&buf[i]);
 			}
 		}
 		fclose(ref);
@@ -683,6 +955,12 @@ main(
 		set_option(argv[0], opt, cob_optarg);
 	}
 
+	if(!isatty(0)) {
+		batchin = 1;
+	} else {
+		printf("Commands end with a semicolon;\n");
+		printf("To exit enter:   quit;\n");
+	}
 	cob_extern_init ();
 	if ((env = getenv("COB_COPY_DIR")) != NULL) {
 		copysearch = strdup (env);
@@ -699,6 +977,7 @@ main(
 	}
 	k = 0;
 	cmd[0] = fileindef[0] = indef[0] = outdef[0] = 0;
+	inkeys[0] = outkeys[0] = 0;
 	memset (flin,  0, sizeof(cob_file));
 	memset (flout, 0, sizeof(cob_file));
 	flin->record = makeField (65500);
@@ -715,15 +994,16 @@ main(
 		}
 		strcpy (&cmd[k], buf);
 		k = strlen(cmd);
+		skip = ncopy = 0;
 		if (cmd[k-1] == ';') {
 			cmd[k-1] = ' ';
 			if (strncasecmp (cmd,"INPUT ",6) == 0) {
 				strcpy (indef, cmd+6);
 				flin->flag_auto_type = 1;
-				parseFile (flin, "INPUT", 256, indef, copyin);
+				parseFile (flin, "INPUT", 256, indef, copyin, inkeys);
 			} else if (strncasecmp (cmd,"OUTPUT ",7) == 0) {
 				strcpy (outdef, cmd+7);
-				parseFile (flout, "OUTPUT", flin->record_max, outdef, copyout);
+				parseFile (flout, "OUTPUT", flin->record_max, outdef, copyout, outkeys);
 			} else if (strncasecmp (cmd,"COPY ",5) == 0) {
 				if (indef[0] < ' ') {
 					printf("INPUT file is not defined\n");
@@ -733,10 +1013,8 @@ main(
 					printf("OUTPUT file is not defined\n");
 					continue;
 				}
-				skip = ncopy = 0;
-				for (k=0; cmd[k] != 0; k++) {
-					if (k==0 
-					|| cmd[k-1] == ' ') {
+				for (k=5; cmd[k] != 0; k++) {
+					if (isspace(cmd[k-1])) {
 						if (matchWord ("SKIP=", cmd, val, &k)) {
 							skip = atoi (val);
 						} else
@@ -750,6 +1028,76 @@ main(
 				printf("COPY %s\n     '%s'\n",flin->assign->data,fileindef);
 				printf("  TO %s\n     '%s'\n",flout->assign->data,outdef);
 				copyFile (flin, flout, skip, ncopy);
+				cmd[0] = fileindef[0] = indef[0] = outdef[0] = 0;
+			} else if (strncasecmp (cmd,"GEN ",4) == 0
+					|| strncasecmp (cmd,"RUN ",4) == 0) {
+				int runit = 0;
+				if (strncasecmp (cmd,"RUN ",4) == 0) 
+					runit = 1;
+				for (k=4; cmd[k] != 0; k++) {
+					if (isspace(cmd[k-1])) {
+						if (matchWord ("SKIPIF[", cmd, val, &k)) {
+							j = sprintf(skipif," \tIF %s\n",val);
+							j += sprintf(&skipif[j]," \t\tGO TO GET-NEXT-100.\n");
+						} else
+						if (matchWord ("SKIP=", cmd, val, &k)) {
+							sprintf (skipnum,"%d",atoi (val));
+						} else
+						if (matchWord ("COBC[", cmd, val, &k)) {
+							strcpy(cobcopts,val);
+						} else
+						if (matchWord ("COPY=", cmd, val, &k)) {
+							sprintf (copynum,"%d",atoi (val));
+						} else
+						if (matchWord ("PROGRAMID=", cmd, val, &k)) {
+							strcpy(progid,val);
+						}
+					}
+				}
+				for (k=0; progid[k] != 0; k++)
+					proglwr[k] = tolower(progid[k]);
+				proglwr[k] = 0;
+				sprintf(cblout,"%s.cbl",proglwr);
+				fo = fopen (cblout,"w");
+				if (fo == NULL) {
+					printf("Error %s opening '%s' output\n",strerror(errno),cblout);
+					exit(-1);
+				}
+				genCopy (flin, flout);
+				fclose(fo);
+
+				sprintf (cmd,"cobc -x %s %s",cobcopts,cblout);
+				printf("Compiling: %s\n",cmd);
+				k = system (cmd);
+				if (k != 0) {
+					printf("Compile of %s; Error status %d\n",cmd,k);
+				} else {
+					printf("Compile of %s; completed\n",cblout);
+					sprintf(cblout,"%s.sh",proglwr);
+					fo = fopen (cblout,"w");
+					if (fo == NULL) {
+						printf("Error %s opening '%s' output\n",strerror(errno),cblout);
+						exit(-1);
+					}
+					fprintf(fo,"#!/bin/sh\n");
+					fprintf(fo,"export DD_INFILE=%s\n",flin->assign->data);
+					fprintf(fo,"export IO_INFILE=\"keycheck=no %s\"\n",indef);
+					fprintf(fo,"export DD_OUTFILE=%s\n",flout->assign->data);
+					fprintf(fo,"export IO_OUTFILE=\"%s\"\n",outdef);
+					fprintf(fo,"%s\n",proglwr);
+					fclose(fo);
+					sprintf (cmd,"chmod a+x %s",cblout);
+					system (cmd);
+					if (runit) {
+						printf("Executing %s;\n",cblout);
+						sprintf (cmd,"./%s",cblout);
+						system (cmd);
+					} else {
+						printf("Script %s; ready\n",cblout);
+					}
+				}
+				cmd[0] = fileindef[0] = indef[0] = outdef[0] = 0;
+				inkeys[0] = outkeys[0] = 0;
 			} else if (strncasecmp (cmd,"QUIT ",5) == 0) {
 				break;
 			} else if (strncasecmp (cmd,"EXIT ",5) == 0) {
