@@ -1,4 +1,8 @@
 
+2021-04-30  Ron Norman <rjn@inglenet.com>
+
+	* fileio.c: Handle adding indexes for 'cobfile' utility
+
 2021-04-27  Ron Norman <rjn@inglenet.com>
 
 	* fileio.c: Add feature to drop index from file being created
